compiletest/parser.output
Terminals unused in grammar

    "long double"
    "inline"
    "long long"
    "restrict"
    "bool"
    "complex"
    "imaginary"
    "question"
    ":"
    "="
    "^"
    "|"


State 341 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit "end of file"

    1 primary_expression: "identifier"
    2                   | constant
    3                   | "(" expression ")"

    4 constant: "f_const"
    5         | "i_const"
    6         | "sting_literal"

    7 postfix_expression: primary_expression
    8                   | postfix_expression "[" expression "]"
    9                   | postfix_expression "(" ")"
   10                   | postfix_expression "(" argument_expression_list ")"
   11                   | postfix_expression "." "identifier"
   12                   | postfix_expression "->" "identifier"
   13                   | postfix_expression "++"
   14                   | postfix_expression "--"
   15                   | "(" type_name ")" "{" initializer_list "}"
   16                   | "(" type_name ")" "{" initializer_list "," "}"

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list "," assignment_expression

   19 unary_expression: postfix_expression
   20                 | "++" unary_expression
   21                 | "--" unary_expression
   22                 | unary_operator cast_expression
   23                 | "sizeof" unary_expression
   24                 | "sizeof" "(" type_name ")"

   25 unary_operator: "&"
   26               | "*"
   27               | "+"
   28               | "-"
   29               | "~"
   30               | "!"

   31 cast_expression: unary_expression
   32                | "(" type_name ")" cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression "*" cast_expression
   35                          | multiplicative_expression "/" cast_expression
   36                          | multiplicative_expression "%" cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression '+' multiplicative_expression
   39                    | additive_expression '-' multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression "<<" additive_expression
   42                 | shift_expression ">>" additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression "<" shift_expression
   45                      | relational_expression ">" shift_expression
   46                      | relational_expression "<=" shift_expression
   47                      | relational_expression ">=" shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression "==" relational_expression
   50                    | equality_expression "!=" relational_expression

   51 and_expression: equality_expression
   52               | and_expression '&' equality_expression

   53 exclusive_or_expression: and_expression
   54                        | exclusive_or_expression '^' and_expression

   55 inclusive_or_expression: exclusive_or_expression
   56                        | inclusive_or_expression '|' exclusive_or_expression

   57 logical_and_expression: inclusive_or_expression
   58                       | logical_and_expression "&&" inclusive_or_expression

   59 logical_or_expression: logical_and_expression
   60                      | logical_or_expression "||" logical_and_expression

   61 conditional_expression: logical_or_expression
   62                       | logical_or_expression '?' expression ':' conditional_expression

   63 assignment_expression: conditional_expression
   64                      | unary_expression assignment_operator assignment_expression

   65 assignment_operator: '='
   66                    | "*="
   67                    | "/="
   68                    | "%="
   69                    | "+="
   70                    | "-="
   71                    | "<<="
   72                    | ">>="
   73                    | "&="
   74                    | "^="
   75                    | "|="

   76 expression: assignment_expression
   77           | expression "," assignment_expression

   78 constant_expression: conditional_expression

   79 declaration: declaration_specifiers ";"
   80            | declaration_specifiers init_declarator_list ";"

   81 declaration_specifiers: storage_class_specifier
   82                       | storage_class_specifier declaration_specifiers
   83                       | type_specifier
   84                       | type_specifier declaration_specifiers
   85                       | type_qualifier
   86                       | type_qualifier declaration_specifiers

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list "," init_declarator

   89 init_declarator: declarator
   90                | declarator '=' initializer

   91 storage_class_specifier: "typedef"
   92                        | "extern"
   93                        | "static"
   94                        | "auto"
   95                        | "register"

   96 type_specifier: "void"
   97               | "char"
   98               | "short"
   99               | "int"
  100               | "long"
  101               | "float"
  102               | "double"
  103               | "signed"
  104               | "unsigned"
  105               | struct_or_union_specifier
  106               | enum_specifier
  107               | "type name"

  108 struct_or_union_specifier: struct_or_union "identifier" "{" struct_declaration_list "}"
  109                          | struct_or_union "{" struct_declaration_list "}"
  110                          | struct_or_union "identifier"

  111 struct_or_union: "struct"
  112                | "union"

  113 struct_declaration_list: struct_declaration
  114                        | struct_declaration_list struct_declaration

  115 struct_declaration: specifier_qualifier_list struct_declarator_list ";"

  116 specifier_qualifier_list: type_specifier specifier_qualifier_list
  117                         | type_specifier
  118                         | type_qualifier specifier_qualifier_list
  119                         | type_qualifier

  120 struct_declarator_list: struct_declarator
  121                       | struct_declarator_list "," struct_declarator

  122 struct_declarator: declarator
  123                  | ':' constant_expression
  124                  | declarator ':' constant_expression

  125 enum_specifier: "enum" "{" enumerator_list "}"
  126               | "enum" "identifier" "{" enumerator_list "}"
  127               | "enum" "identifier"

  128 enumerator_list: enumerator
  129                | enumerator_list "," enumerator

  130 enumerator: "identifier"
  131           | "identifier" '=' constant_expression

  132 type_qualifier: "const"
  133               | "volatile"

  134 declarator: pointer direct_declarator
  135           | direct_declarator

  136 direct_declarator: "identifier"
  137                  | "(" declarator ")"
  138                  | direct_declarator '[' constant_expression ']'
  139                  | direct_declarator '[' ']'
  140                  | direct_declarator "(" parameter_type_list ")"
  141                  | direct_declarator "(" identifier_list ")"
  142                  | direct_declarator "(" ")"

  143 pointer: '*'
  144        | '*' type_qualifier_list
  145        | '*' pointer
  146        | '*' type_qualifier_list pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list: parameter_list
  150                    | parameter_list "," "ellipsis"

  151 parameter_list: parameter_declaration
  152               | parameter_list "," parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers abstract_declarator
  155                      | declaration_specifiers

  156 identifier_list: "identifier"
  157                | identifier_list "," "identifier"

  158 type_name: specifier_qualifier_list
  159          | specifier_qualifier_list abstract_declarator

  160 abstract_declarator: pointer
  161                    | direct_abstract_declarator
  162                    | pointer direct_abstract_declarator

  163 direct_abstract_declarator: "(" abstract_declarator ")"
  164                           | '[' ']'
  165                           | '[' constant_expression ']'
  166                           | direct_abstract_declarator '[' ']'
  167                           | direct_abstract_declarator '[' constant_expression ']'
  168                           | "(" ")"
  169                           | "(" parameter_type_list ")"
  170                           | direct_abstract_declarator "(" ")"
  171                           | direct_abstract_declarator "(" parameter_type_list ")"

  172 initializer: assignment_expression
  173            | "{" initializer_list "}"
  174            | "{" initializer_list "," "}"

  175 initializer_list: initializer
  176                 | initializer_list "," initializer

  177 statement: labeled_statement
  178          | compound_statement
  179          | expression_statement
  180          | selection_statement
  181          | iteration_statement
  182          | jump_statement

  183 labeled_statement: "identifier" ':' statement
  184                  | "case" constant_expression ':' statement
  185                  | "default" ':' statement

  186 compound_statement: "{" "}"
  187                   | "{" statement_list "}"
  188                   | "{" declaration_list "}"
  189                   | "{" declaration_list statement_list "}"

  190 declaration_list: declaration
  191                 | declaration_list declaration

  192 statement_list: statement
  193               | statement_list statement

  194 expression_statement: ";"
  195                     | expression ";"

  196 selection_statement: "if" "(" expression ")" statement
  197                    | "if" "(" expression ")" statement "else" statement
  198                    | "switch" "(" expression ")" statement

  199 iteration_statement: "while" "(" expression ")" statement
  200                    | "do" statement "while" "(" expression ")" ";"
  201                    | "for" "(" expression_statement expression_statement ")" statement
  202                    | "for" "(" expression_statement expression_statement expression ")" statement

  203 jump_statement: "goto" "identifier" ";"
  204               | "continue" ";"
  205               | "break" ";"
  206               | "return" ";"
  207               | "return" expression ";"

  208 translation_unit: external_declaration
  209                 | translation_unit external_declaration

  210 external_declaration: function_definition
  211                     | declaration

  212 function_definition: declaration_specifiers declarator declaration_list compound_statement
  213                    | declaration_specifiers declarator compound_statement
  214                    | declarator declaration_list compound_statement
  215                    | declarator compound_statement


Terminals, with rules where they appear

    "end of file" (0) 0
    '&' (38) 52
    '*' (42) 143 144 145 146
    '+' (43) 38
    '-' (45) 39
    ':' (58) 62 123 124 183 184 185
    '=' (61) 65 90 131
    '?' (63) 62
    '[' (91) 138 139 164 165 166 167
    ']' (93) 138 139 164 165 166 167
    '^' (94) 54
    '|' (124) 56
    error (256)
    "identifier" <std::string> (258) 1 11 12 108 110 126 127 130 131 136 156 157 183 203
    "i_const" <uint64_t> (259) 5
    "f_const" <long double> (260) 4
    "sting_literal" <std::string> (261) 6
    "type name" <std::string> (262) 107
    "auto" <std::string> (263) 94
    "break" <std::string> (264) 205
    "case" <std::string> (265) 184
    "char" <std::string> (266) 97
    "const" <std::string> (267) 132
    "continue" <std::string> (268) 204
    "default" <std::string> (269) 185
    "do" <std::string> (270) 200
    "double" <std::string> (271) 102
    "long double" <std::string> (272)
    "else" <std::string> (273) 197
    "enum" <std::string> (274) 125 126 127
    "extern" <std::string> (275) 92
    "float" <std::string> (276) 101
    "for" <std::string> (277) 201 202
    "goto" <std::string> (278) 203
    "if" <std::string> (279) 196 197
    "inline" <std::string> (280)
    "int" <std::string> (281) 99
    "long" <std::string> (282) 100
    "long long" <std::string> (283)
    "register" <std::string> (284) 95
    "restrict" <std::string> (285)
    "return" <std::string> (286) 206 207
    "short" <std::string> (287) 98
    "signed" <std::string> (288) 103
    "sizeof" <std::string> (289) 23 24
    "static" <std::string> (290) 93
    "struct" <std::string> (291) 111
    "switch" <std::string> (292) 198
    "typedef" <std::string> (293) 91
    "union" <std::string> (294) 112
    "unsigned" <std::string> (295) 104
    "void" <std::string> (296) 96
    "volatile" <std::string> (297) 133
    "while" <std::string> (298) 199 200
    "bool" <std::string> (299)
    "complex" <std::string> (300)
    "imaginary" <std::string> (301)
    "ellipsis" <std::string> (302) 150
    "question" <std::string> (303)
    ";" <std::string> (304) 79 80 115 194 195 200 203 204 205 206 207
    "{" <std::string> (305) 15 16 108 109 125 126 173 174 186 187 188 189
    "}" <std::string> (306) 15 16 108 109 125 126 173 174 186 187 188 189
    "," <std::string> (307) 16 18 77 88 121 129 150 152 157 174 176
    ":" <std::string> (308)
    "(" <std::string> (309) 3 9 10 15 16 24 32 137 140 141 142 163 168 169 170 171 196 197 198 199 200 201 202
    ")" <std::string> (310) 3 9 10 15 16 24 32 137 140 141 142 163 168 169 170 171 196 197 198 199 200 201 202
    "[" <std::string> (311) 8
    "]" <std::string> (312) 8
    "." <std::string> (313) 11
    "~" <std::string> (314) 29
    "=" <std::string> (315)
    ">>=" <std::string> (316) 72
    "<<=" <std::string> (317) 71
    "+=" <std::string> (318) 69
    "-=" <std::string> (319) 70
    "*=" <std::string> (320) 66
    "/=" <std::string> (321) 67
    "%=" <std::string> (322) 68
    "&=" <std::string> (323) 73
    "^=" <std::string> (324) 74
    "|=" <std::string> (325) 75
    ">>" <std::string> (326) 42
    "<<" <std::string> (327) 41
    "++" <std::string> (328) 13 20
    "--" <std::string> (329) 14 21
    "->" <std::string> (330) 12
    "&&" <std::string> (331) 58
    "||" <std::string> (332) 60
    ">=" <std::string> (333) 47
    "<=" <std::string> (334) 46
    ">" <std::string> (335) 45
    "<" <std::string> (336) 44
    "==" <std::string> (337) 49
    "!=" <std::string> (338) 50
    "!" <std::string> (339) 30
    "^" <std::string> (340)
    "&" <std::string> (341) 25
    "|" <std::string> (342)
    "-" <std::string> (343) 28
    "+" <std::string> (344) 27
    "*" <std::string> (345) 26 34
    "/" <std::string> (346) 35
    "%" <std::string> (347) 36


Nonterminals, with rules where they appear

    $accept (104)
        on left: 0
    primary_expression <Expression> (105)
        on left: 1 2 3
        on right: 7
    constant <Constant> (106)
        on left: 4 5 6
        on right: 2
    postfix_expression <Expression> (107)
        on left: 7 8 9 10 11 12 13 14 15 16
        on right: 8 9 10 11 12 13 14 19
    argument_expression_list <std::vector<Expression>> (108)
        on left: 17 18
        on right: 10 18
    unary_expression <Expression> (109)
        on left: 19 20 21 22 23 24
        on right: 20 21 23 31 64
    unary_operator <std::string> (110)
        on left: 25 26 27 28 29 30
        on right: 22
    cast_expression <Expression> (111)
        on left: 31 32
        on right: 22 32 33 34 35 36
    multiplicative_expression <Expression> (112)
        on left: 33 34 35 36
        on right: 34 35 36 37 38 39
    additive_expression <Expression> (113)
        on left: 37 38 39
        on right: 38 39 40 41 42
    shift_expression <Expression> (114)
        on left: 40 41 42
        on right: 41 42 43 44 45 46 47
    relational_expression <Expression> (115)
        on left: 43 44 45 46 47
        on right: 44 45 46 47 48 49 50
    equality_expression <Expression> (116)
        on left: 48 49 50
        on right: 49 50 51 52
    and_expression <Expression> (117)
        on left: 51 52
        on right: 52 53 54
    exclusive_or_expression <Expression> (118)
        on left: 53 54
        on right: 54 55 56
    inclusive_or_expression <Expression> (119)
        on left: 55 56
        on right: 56 57 58
    logical_and_expression <Expression> (120)
        on left: 57 58
        on right: 58 59 60
    logical_or_expression <Expression> (121)
        on left: 59 60
        on right: 60 61 62
    conditional_expression <Expression> (122)
        on left: 61 62
        on right: 62 63 78
    assignment_expression <Expression> (123)
        on left: 63 64
        on right: 17 18 64 76 77 172
    assignment_operator (124)
        on left: 65 66 67 68 69 70 71 72 73 74 75
        on right: 64
    expression <Expression> (125)
        on left: 76 77
        on right: 3 8 62 77 195 196 197 198 199 200 202 207
    constant_expression <Expression> (126)
        on left: 78
        on right: 123 124 131 138 165 167 184
    declaration (127)
        on left: 79 80
        on right: 190 191 211
    declaration_specifiers (128)
        on left: 81 82 83 84 85 86
        on right: 79 80 82 84 86 153 154 155 212 213
    init_declarator_list (129)
        on left: 87 88
        on right: 80 88
    init_declarator (130)
        on left: 89 90
        on right: 87 88
    storage_class_specifier (131)
        on left: 91 92 93 94 95
        on right: 81 82
    type_specifier (132)
        on left: 96 97 98 99 100 101 102 103 104 105 106 107
        on right: 83 84 116 117
    struct_or_union_specifier (133)
        on left: 108 109 110
        on right: 105
    struct_or_union (134)
        on left: 111 112
        on right: 108 109 110
    struct_declaration_list (135)
        on left: 113 114
        on right: 108 109 114
    struct_declaration (136)
        on left: 115
        on right: 113 114
    specifier_qualifier_list (137)
        on left: 116 117 118 119
        on right: 115 116 118 158 159
    struct_declarator_list (138)
        on left: 120 121
        on right: 115 121
    struct_declarator (139)
        on left: 122 123 124
        on right: 120 121
    enum_specifier (140)
        on left: 125 126 127
        on right: 106
    enumerator_list (141)
        on left: 128 129
        on right: 125 126 129
    enumerator (142)
        on left: 130 131
        on right: 128 129
    type_qualifier (143)
        on left: 132 133
        on right: 85 86 118 119 147 148
    declarator (144)
        on left: 134 135
        on right: 89 90 122 124 137 153 212 213 214 215
    direct_declarator (145)
        on left: 136 137 138 139 140 141 142
        on right: 134 135 138 139 140 141 142
    pointer (146)
        on left: 143 144 145 146
        on right: 134 145 146 160 162
    type_qualifier_list (147)
        on left: 147 148
        on right: 144 146 148
    parameter_type_list (148)
        on left: 149 150
        on right: 140 169 171
    parameter_list (149)
        on left: 151 152
        on right: 149 150 152
    parameter_declaration (150)
        on left: 153 154 155
        on right: 151 152
    identifier_list (151)
        on left: 156 157
        on right: 141 157
    type_name (152)
        on left: 158 159
        on right: 15 16 24 32
    abstract_declarator (153)
        on left: 160 161 162
        on right: 154 159 163
    direct_abstract_declarator (154)
        on left: 163 164 165 166 167 168 169 170 171
        on right: 161 162 166 167 170 171
    initializer (155)
        on left: 172 173 174
        on right: 90 175 176
    initializer_list (156)
        on left: 175 176
        on right: 15 16 173 174 176
    statement (157)
        on left: 177 178 179 180 181 182
        on right: 183 184 185 192 193 196 197 198 199 200 201 202
    labeled_statement (158)
        on left: 183 184 185
        on right: 177
    compound_statement (159)
        on left: 186 187 188 189
        on right: 178 212 213 214 215
    declaration_list (160)
        on left: 190 191
        on right: 188 189 191 212 214
    statement_list (161)
        on left: 192 193
        on right: 187 189 193
    expression_statement (162)
        on left: 194 195
        on right: 179 201 202
    selection_statement (163)
        on left: 196 197 198
        on right: 180
    iteration_statement (164)
        on left: 199 200 201 202
        on right: 181
    jump_statement (165)
        on left: 203 204 205 206 207
        on right: 182
    translation_unit (166)
        on left: 208 209
        on right: 0 209
    external_declaration (167)
        on left: 210 211
        on right: 208 209
    function_definition (168)
        on left: 212 213 214 215
        on right: 210


State 0

    0 $accept: . translation_unit "end of file"

    "identifier"  shift, and go to state 1
    "type name"   shift, and go to state 2
    "auto"        shift, and go to state 3
    "char"        shift, and go to state 4
    "const"       shift, and go to state 5
    "double"      shift, and go to state 6
    "enum"        shift, and go to state 7
    "extern"      shift, and go to state 8
    "float"       shift, and go to state 9
    "int"         shift, and go to state 10
    "long"        shift, and go to state 11
    "register"    shift, and go to state 12
    "short"       shift, and go to state 13
    "signed"      shift, and go to state 14
    "static"      shift, and go to state 15
    "struct"      shift, and go to state 16
    "typedef"     shift, and go to state 17
    "union"       shift, and go to state 18
    "unsigned"    shift, and go to state 19
    "void"        shift, and go to state 20
    "volatile"    shift, and go to state 21
    "("           shift, and go to state 22
    '*'           shift, and go to state 23

    declaration                go to state 24
    declaration_specifiers     go to state 25
    storage_class_specifier    go to state 26
    type_specifier             go to state 27
    struct_or_union_specifier  go to state 28
    struct_or_union            go to state 29
    enum_specifier             go to state 30
    type_qualifier             go to state 31
    declarator                 go to state 32
    direct_declarator          go to state 33
    pointer                    go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


State 1

  136 direct_declarator: "identifier" .

    $default  reduce using rule 136 (direct_declarator)


State 2

  107 type_specifier: "type name" .

    $default  reduce using rule 107 (type_specifier)


State 3

   94 storage_class_specifier: "auto" .

    $default  reduce using rule 94 (storage_class_specifier)


State 4

   97 type_specifier: "char" .

    $default  reduce using rule 97 (type_specifier)


State 5
